--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ skrillax-packet = { path = "../skrillax-network/crates/skrillax-packet", feature
 reqwest = "0.12.4"
 serde = { version = "1.0.199", features = ["derive"] }
 color-eyre = "0.6.3"
+toml = "0.8.12"
