--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,14 +3,19 @@ name = "silkroad-patch-archiver"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-tokio = { version = "1.37.0", features = ["full"] }
-skrillax-stream = { path = "../skrillax-network/crates/skrillax-stream" }
-skrillax-serde = { path = "../skrillax-network/crates/skrillax-serde", features = ["derive"] }
-skrillax-packet = { path = "../skrillax-network/crates/skrillax-packet", features = ["derive"] }
-reqwest = "0.12.4"
+tokio = { version = "1.37.0", features = [
+    "rt-multi-thread",
+    "macros",
+    "fs",
+    "signal",
+] }
+skrillax-stream = "0.1"
+skrillax-serde = { version = "0.1", features = ["derive"] }
+skrillax-packet = { version = "0.2", features = ["derive"] }
+reqwest = { version = "0.12.4", features = [
+    "rustls-tls",
+], default-features = false }
 serde = { version = "1.0.199", features = ["derive"] }
 color-eyre = "0.6.3"
 toml = "0.8.12"
